Remove logo from footer and fix footer text

--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -3,7 +3,6 @@ var templates = env.conf.templates;
 var examples = env.conf.opts.tutorials;
 var css = templates.css;
 var logo = templates.logo;
-var footerText = templates.footerText;
 var logoUrl = 'img/toast-ui.png';
 var width, height;
 var name = templates.name || package.name || title;
@@ -95,8 +94,7 @@ if (package) {
 </div>
 
 <footer>
-    <img class="logo" src="<?js= logoUrl?>" style="<?js= style ?>">
-    <div class="footer-text"><?js= footerText || 'NHN Entertainment. Frontend Development Lab' ?></div>
+    <div class="footer-text"><?js= 'Welcome to Komada\'s Documentation! Discord: https://discord.gg/FpEFSyY' ?></div>
 </footer>
 <script>prettyPrint();</script>
 <script src="scripts/jquery.min.js"></script>
